--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ Flask==3.0.3
 Flask-Cors==4.0.0
 gunicorn==22.0.0
 reportlab==4.1.0
-pandas==2.1.1
+pandas==2.0.3
 openpyxl==3.1.2
-matplotlib==3.8.0
+matplotlib==3.7.2
 pip==25.1.1
 setuptools==69.5.1
 wheel==0.43.0
+numpy==1.25.2
