--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,9 @@
-# fly.toml app configuration file generated for bukabox on 2025-10-16T04:39:09+07:00
+# fly.toml app configuration file generated for bukabox-data on 2025-10-15T22:20:34Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-# fly.toml app configuration file generated for bukabox on 2025-10-16T04:39:09+07:00
-app = 'bukabox'
+app = 'bukabox-data'
 primary_region = 'sin'
 
 [build]
@@ -21,4 +20,4 @@ primary_region = 'sin'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-
+  memory_mb = 1024
