--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
-Flask
-gunicorn
-requests
-
-# --- Core build tools (install first)
+# --- Core build tools
 setuptools==69.5.1
 wheel==0.43.0
 pip==25.1.1
 
-# --- Main app dependencies
+# --- Web framework & server
 Flask==3.0.3
 Flask-Cors==4.0.0
 gunicorn==22.0.0
-reportlab==4.1.0
+requests==2.31.0
+
+# --- Data & file processing
 pandas==2.0.3
 numpy==1.25.2
 openpyxl==3.1.2
 matplotlib==3.7.2
+reportlab==4.1.0
+
+# --- Utilities (optional but safe)
+python-dateutil==2.8.2
+pytz==2024.1
+jinja2==3.1.4
+itsdangerous==2.1.2
+MarkupSafe==2.1.5
