--- a/fly.toml
+++ b/fly.toml
@@ -22,7 +22,9 @@ primary_region = 'sin'
   cpu_kind = 'shared'
   cpus = 1
 
-[[mounts]]
+
+[mounts]
   source = "bukabox_data"
-  destination = "/data"
+  destination = "/app/app/data"
+
 
